--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "connect-multiparty": "^2.1.1",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.0.0",
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "http-status-codes": "^1.3.2",
     "moment": "^2.24.0",
     "mongoose": "^5.2.5",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.10",
     "passport": "^0.4.0",
+    "socket.io": "^2.2.0",
     "typescript": "^3.3.4000",
     "uuid": "^3.3.2"
   },
