--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^2.6.1",
+    "aws-sdk": "^2.428.0",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "bower": "^1.8.4",
