move to src folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
   "compilerOptions": {
+    /* Basic Options */
     "module": "commonjs",
     "resolveJsonModule": true,
-    "target": "es2016",   
+    "target": "es2016",                        /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */
+    /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
     "allowJs": true,
     "outDir": "dist",
     "strict": true,
@@ -10,6 +12,10 @@
     "lib": [
       "es2017",
       "dom"
-    ]
-  }
+    ],
+    
+  },
+  "include": [
+    "./src/**/*",
+  ]
 }
