--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "http-status-codes": "^1.3.2",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongoose": "^5.2.5",
     "morgan": "^1.9.1",
