--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,9 @@
     "lib": [
       "es2017",
       "dom"
-    ],
-    
+    ]
   },
   "include": [
-    "./src/**/*",
+    "./src/**/*"
   ]
 }
