--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.4",
+    "express-fingerprint": "^1.1.3",
     "express-session": "^1.15.6",
     "http-status-codes": "^1.3.2",
     "lodash": "^4.17.15",
