--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.9.1",
     "nodemon": "^1.18.10",
     "passport": "^0.4.0",
+    "redis": "^2.8.0",
     "socket.io": "^2.2.0",
     "typescript": "^3.3.4000",
     "uuid": "^3.3.2"
@@ -47,6 +48,7 @@
     "@types/node": "^10.12.0",
     "@types/passport-jwt": "^3.0.1",
     "@types/passport-local": "^1.0.33",
+    "@types/redis": "^2.8.14",
     "@types/socket.io": "^2.1.0",
     "@types/uuid": "^3.4.4"
   }
