--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "express-validator": "^6.2.0",
     "http-status-codes": "^1.3.2",
     "moment": "^2.24.0",
     "mongoose": "^5.2.5",
