--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.4",
     "express-fingerprint": "^1.1.3",
     "express-session": "^1.15.6",
+    "express-validator": "^6.3.0",
     "http-status-codes": "^1.3.2",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
