--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.15.6",
     "express-validator": "^6.3.0",
     "http-status-codes": "^1.3.2",
+    "kafka-node": "^5.0.0",
     "moment": "^2.24.0",
     "mongoose": "^5.2.5",
     "morgan": "^1.9.1",
