--- a/package.json
+++ b/package.json
@@ -11,19 +11,23 @@
   "author": "Darryl Fabian",
   "license": "ISC",
   "dependencies": {
+    "@typegoose/typegoose": "^7.1.2",
+    "apollo-server-express": "^2.13.1",
     "async": "^2.6.1",
     "aws-sdk": "^2.428.0",
     "axios": "^0.18.0",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "bower": "^1.8.4",
+    "class-validator": "^0.12.2",
     "connect-flash": "^0.1.1",
     "connect-multiparty": "^2.1.1",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.0.0",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "express-session": "^1.15.6",
     "express-validator": "^6.3.0",
+    "graphql": "^15.0.0",
     "http-status-codes": "^1.3.2",
     "kafka-node": "^5.0.0",
     "moment": "^2.24.0",
@@ -31,7 +35,11 @@
     "morgan": "^1.9.1",
     "nodemon": "^1.18.10",
     "passport": "^0.4.0",
+    "reflect-metadata": "^0.1.13",
     "socket.io": "^2.2.0",
+    "ts-node": "^8.10.1",
+    "type-graphql": "^1.0.0-rc.1",
+    "typeorm": "^0.2.24",
     "typescript": "^3.3.4000",
     "uuid": "^3.3.2"
   },
