--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,30 @@
 {
   "compilerOptions": {
-    /* Basic Options */
-    "module": "commonjs",
-    "resolveJsonModule": true,
-    "target": "es2016",                        /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */
-    /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
-    "allowJs": true,
-    "outDir": "dist",
-    "strict": true,
-    "moduleResolution": "Node",
-    "lib": [
-      "es2017",
-      "dom"
-    ]
+      "module": "commonjs",
+      "esModuleInterop": false,
+      // "allowSyntheticDefaultImports": true,
+      "target": "es2016",  // or newer if your node.js version supports this
+      "strictNullChecks": true,
+      "strictFunctionTypes": true,
+      "noImplicitThis": true,
+      "noUnusedLocals": false,
+      "noUnusedParameters": false,
+      "noImplicitReturns": false,
+      "skipLibCheck": true,
+      "declaration": false,
+      "noFallthroughCasesInSwitch": true,
+      "composite": false,
+      "noImplicitAny": true,
+      "moduleResolution": "node",
+      "lib": ["dom", "es2016", "esnext.asynciterable"],
+      "sourceMap": true,
+      "emitDecoratorMetadata": true,
+      "strict": false,
+      "experimentalDecorators": true,
+      "outDir": "dist",
+      "rootDir": "src",
   },
   "include": [
-    "./src/**/*",
+      "src/**/*"
   ]
 }
