--- a/package.json
+++ b/package.json
@@ -11,28 +11,35 @@
   "author": "Darryl Fabian",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^2.19.1",
     "aws-sdk": "^2.428.0",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "class-validator": "^0.12.2",
     "connect-flash": "^0.1.1",
     "connect-multiparty": "^2.1.1",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^6.0.0",
     "express": "^4.16.4",
+    "express-graphql": "^0.12.0",
     "express-session": "^1.15.6",
     "express-validator": "^6.3.0",
+    "graphql": "^15.4.0",
     "http-status-codes": "^1.3.2",
     "kafka-node": "^5.0.0",
     "moment": "^2.24.0",
     "mongoose": "^5.2.5",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
+    "reflect-metadata": "^0.1.13",
     "socket.io": "^2.2.0",
+    "sqlite3": "^5.0.0",
+    "type-graphql": "^1.1.1",
+    "typeorm": "^0.2.29",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "nodemon": "^1.18.10",
-    "typescript": "^3.9.5",
     "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^3.0.0",
     "@types/connect-flash": "0.0.34",
@@ -47,7 +54,9 @@
     "@types/passport-jwt": "^3.0.1",
     "@types/passport-local": "^1.0.33",
     "@types/socket.io": "^2.1.0",
-    "@types/uuid": "^3.4.4"
+    "@types/uuid": "^3.4.4",
+    "nodemon": "^1.18.10",
+    "typescript": "^3.9.7"
   },
   "repository": {
     "type": "git",
